#27 - fix spacing of brandText when used with image

--- a/src/header/css/header-brand.pcss
+++ b/src/header/css/header-brand.pcss
@@ -51,4 +51,8 @@
 	font-size: 18px;
 	font-weight: 400;
 	color: var(--mono-20);
+
+	&.-has-image {
+		margin-inline-start: 12px;
+	}
 }
